Javadoc link target="_self" in JDK >= 9

--- a/book/pom.xml
+++ b/book/pom.xml
@@ -39,7 +39,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<documented.shortTitle>Theme Documentation</documented.shortTitle>
 		<documented.description>SemanticCMS theme tailored for technical documentation.</documented.description>
 
-		<description.html><![CDATA[Documentation for <a target="_top" href="${project.url}">${documented.name}</a> in <a target="_top" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
+		<description.html><![CDATA[Documentation for <a target="${javadoc.target}" href="${project.url}">${documented.name}</a> in <a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
 	</properties>
 
 	<name>SemanticCMS Theme Documentation² Book</name>
