--- a/src/main/resources-filtered/com/semanticcms/theme/documentation/Maven.properties
+++ b/src/main/resources-filtered/com/semanticcms/theme/documentation/Maven.properties
@@ -1,6 +1,6 @@
 #
 # semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-# Copyright (C) 2019  AO Industries, Inc.
+# Copyright (C) 2019, 2020  AO Industries, Inc.
 #     support@aoindustries.com
 #     7262 Bull Pen Cir
 #     Mobile, AL 36695
@@ -23,4 +23,4 @@
 
 # Properties exposed to Java code through Maven build
 
-jquery.version=@{org.webjars:jquery:jar.version}
+jqueryVersion=@{org.webjars:jquery:jar.version}
