--- a/pom.xml
+++ b/pom.xml
@@ -333,10 +333,19 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			</dependency>
 			<!-- Runtime Transitive -->
 			<dependency>
-				<groupId>org.webjars</groupId><artifactId>d3js</artifactId><version>5.16.0</version>
+				<groupId>org.webjars.npm</groupId><artifactId>d3</artifactId><version>5.16.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars.npm</groupId><artifactId>dagre</artifactId><version>0.8.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.webjars.npm</groupId><artifactId>dagre-d3</artifactId><version>0.6.4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars.npm</groupId><artifactId>graphlib</artifactId><version>2.1.8</version>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars.npm</groupId><artifactId>lodash</artifactId><version>4.17.20</version>
 			</dependency>
 			<!-- BOM -->
 			<dependency>
