Configured <ciManagement> for GitHub Actions

--- a/book/pom.xml
+++ b/book/pom.xml
@@ -82,6 +82,11 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<url>https://github.com/aoindustries/semanticcms-theme-documentation/issues</url>
 	</issueManagement>
 
+	<ciManagement>
+		<system>GitHub Actions</system>
+		<url>https://github.com/aoindustries/semanticcms-theme-documentation/actions</url>
+	</ciManagement>
+
 	<repositories>
 		<!-- Repository required here, too, so can find parent -->
 		<repository>
